--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<style>
 			body {
 				margin: 0;
+				overflow: hidden;
+				display: block;
+				background-color: black
 			}
 		</style>
 	</head>
