--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		</style>
 	</head>
 	<body>
+		<script src="VectorMath.js" type="text/javascript"></script>
 		<script src="main.js" type="text/javascript"></script>
 	</body>
 </html>
